syntax = "proto3";

package mozaic.protocol.client_server;

message EventId {
    uint32 component_id = 1;
    uint32 number = 2;
    uint32 type_id = 3;
}

message Event {
    EventId id = 1;
    bytes data = 2;
}

message Response {
    EventId responds_to = 1;
    bytes data = 2;
}